syntax = "proto2";
option java_package = "com.ava.bigdata.common.rpc.hadoop.protobuf.proto";
option java_outer_classname = "MyResourceTrackerMessage";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

// message生成静态内部类
message MyRegisterNodeManagerRequestProto {
  required string hostname = 1;
  required int32 cpu = 2;
  required int32 memory = 3;
}

message MyRegisterNodeManagerResponseProto {
  required string flag = 1;
}